Fix broken CSS variable for inline code text color

--- a/_sass/general/themes.scss
+++ b/_sass/general/themes.scss
@@ -7,13 +7,13 @@ html.light {
     --button-bg-color: #35647a;
     --button-text-color: white;
     --card-bg-color: white;
-    --code-text-color-inline: #5b6169;
     --footer-bg-color: var(--nav-bg-color);
     --footer-text-color: var(--nav-text-color);
     --form-bg-color: #f6f6f6;
     --hero-bg-color: #1c1c1c;
     --hover-bg-color: #f3f5f7;
     --inline-code-bg-color: rgba(230, 230, 230, 0.749);
+    --inline-code-text-color: #5b6169;
     --input-bg-color: white;
     --input-border-color-focus: #288bba;
     --input-border-color: hsl(0, 0%, 85%);
@@ -59,13 +59,13 @@ html.dark {
     --button-bg-color: #bda17f;
     --button-text-color: #292929;
     --card-bg-color: #292929;
-    --code-text-color-inline: #b2b2b2;
     --footer-bg-color: var(--nav-bg-color);
     --footer-text-color: var(--nav-text-color);
     --form-bg-color: #292929;
     --hero-bg-color: #202020;
     --hover-bg-color: #292929;
     --inline-code-bg-color: rgba(88, 88, 88, 0.65);
+    --inline-code-text-color: #b2b2b2;
     --input-bg-color: #3b3b3b;
     --input-border-color-focus: #bda17f;
     --input-border-color: hsl(0, 0%, 25%);
